--- a/tmpl/keys.html
+++ b/tmpl/keys.html
@@ -5,11 +5,11 @@
 
     <article>
 
-        <div style="display:flex;width:100%">
+        <div style="display:flex;width:100%;margin-top:15px;">
             <div style="flex-basis:70%">
                 <h1>API Keys</h1>
             </div>
-            <div style="padding-top:25px;text-align:right;flex-basis:30%;">
+            <div style="padding-top:10px;text-align:right;flex-basis:30%;">
 
                 <a href="#" class="button" onclick="pushq.newKey()">Create a New API Key</a>
 
