--- a/tmpl/keys.html
+++ b/tmpl/keys.html
@@ -31,6 +31,10 @@
             </tr>
             {{ end }}
         </table>
+
+        <div id="showkey">
+            
+        </div>
     </article>
 
     <aside>
